# BaC

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  advget.h  bac.cpp  bac.h  configure.in.h  main.cpp  program.cpp  program.h  translate.cpp  translate.h
doc/: README-en_US.md  README-zh_CN.md
locale/: language-en_US  language-zh_CN
